chore: remove reference

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:description" content="><((((`> ash.pm"/>
+    <meta property="og:description" content="The discord bot for your guild's listening experience."/>
     <meta name="theme-color" content="#FF5D35"/>
     <title>oscen.io - discord bot</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
